# Wooey

./: .bowerrc  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTORS.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  appveyor.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.gitflask/: ignore
.github/workflows/: build.yml  code-quality.yml  deploy-docker.yml  deploy-pypi.yml
conf/: requirements.txt
conf/project_template/: __init__.py  celery.py  requirements.txt  tasks.py
data/: example_data_for_bar_script.csv
datflask/a/: example_data_for_bar_script.csv
djangui/: __init__.py  admin.py  apps.py  celery.py  django_compat.py  djanguistorage.py  requirements.txt  settings.py  signals.py  tasks.py  test_settings.py  urls.py  version.py
djangui/backend/: __init__.py  argparse_specs.py  nodes.py  utils.py
djangui/db/: fields.py  models.py
djangui/forms/: __init__.py  factory.py  fields.py  scripts.py
djangui/migrations/: 0001_initial.py  0002_auto_20150427_2205.py  0002_remove_scriptparameter_output_path.py  0003_populate_from_slug.py
djangui/models/: __init__.py  (+4 more)
docker/: .env  Dockerfile  celery  celeryconfig.py  docker-compose.common.yml  docker-compose.override.template.yml  docker-compose.yml  manage  run  run-server  test  user_settings.py  wooey-compose
docs/: Makefile  admin.rst  api.rst  api_keys.rst  apps.rst  aws.rst  aws_rds.rst  backend.rst  celery.rst  changelog.rst  conf.py  configuration.rst  customizations.rst  dev_install.rst  dev_setup.rst  digitalocean.rst  django_compat.rst  docker_scripts.rst  fly.rst  forms.rst  heroku.rst  index.rst  install.rst  make.bat  management.rst  models.rst  openshift.rst  remote.rst  requirements.in  requirements.txt  running.rst  running_wooey.rst  script_parameters_admin.rst  scripts.rst  security.rst  settings.rst  signals.rst  tasks.rst  test_settings.rst  test_urls.rst  (+7 more)
flask/: .gitignore  LICENSE  Procfile  bower.json  manage.py
requirements/: prod.txt
scripts/: 8 Queens Problem.py  Collatz Dash.md  Collatz Dash.py  IMDB.md  bar.json  djanguify.py  longitudinal.py  plot_some_numbers.md  wooify  wooify.py
setflask/: up.py
tests/: factories.py  test_project.py
wooey/: __init__.py  admin.py  app.py  apps.py  assets.py  django_compat.py  docs_settings.py  errors.py  extensions.py  middleware.py  settings.py  signals.py  tasks.py  test_settings.py  test_urls.py  urls.py  utils.py  version.py  wooeystorage.py
(+369 files in other folders)
